--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UnicodeInternalHackathon">
+        <activity android:name=".Buyer_All_Products"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Seller_All_Products"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
