Seller Orders Activity created basic UI ,backend integration not done yet,,minor manifest change

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,23 +27,17 @@
 
         <activity
             android:name=".SellerAddProduct"
-            android:exported="true">
+            android:exported="true"/>
 
+
+        <activity
+            android:name=".Seller_All_Products"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".Seller_All_Products"
-            android:exported="true">
-            <!--<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
         </activity>
     </application>
 
