UI/UX changes in RegisterActivity.kt
RegisterActivity.kt is made such as it
takes different input and works different for
buyers on sellers.

User can switch between registering as a buyer or
a seller with buttons.

The different EditTexts and Button change visibility
depending on the selected option between buyer and seller.

Functionality is yet to be added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.UnicodeInternalHackathon">
+        android:theme="@style/Theme.UnicodeInternalHackathon"
+        android:fullBackupContent="true">
         <activity
             android:name=".SellerProducts"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" />
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
@@ -33,11 +42,6 @@
         <activity
             android:name=".Seller_All_Products"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
