added code for all products description page and made its layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UnicodeInternalHackathon">
         <activity
-<<<<<<< HEAD
+            android:name=".All_Product_Desc"
+            android:exported="false" />
+        <activity
             android:name=".All_Products"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"/>
-=======
+            android:exported="true" />
+        <activity
             android:name=".SellerProducts"
             android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true" />
->>>>>>> dfa93ce6db2c91b5c16bd059fd3a7c0a56ad6d40
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
@@ -32,15 +30,9 @@
         <activity
             android:name=".Buyer_All_Products"
             android:exported="true" />
-<<<<<<< HEAD
-=======
-
         <activity
             android:name=".SellerAddProduct"
-            android:exported="true"/>
-
-
->>>>>>> dfa93ce6db2c91b5c16bd059fd3a7c0a56ad6d40
+            android:exported="true" />
         <activity
             android:name=".Seller_All_Products"
             android:exported="true">
