--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.unicodeinternalhackathon">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,8 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UnicodeInternalHackathon">
         <activity
-            android:name=".SellerProducts"
+            android:name=".ProductDetails"
             android:exported="false" />
+        <activity
+            android:name=".SellerProducts"
+            android:exported="true">
+
+
+        </activity>
+
+
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
@@ -24,20 +34,21 @@
         <activity
             android:name=".Buyer_All_Products"
             android:exported="true" />
-
         <activity
             android:name=".SellerAddProduct"
-            android:exported="true"/>
-
-
-        <activity
-            android:name=".Seller_All_Products"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+
+        <activity
+            android:name=".Seller_All_Products"
+            android:exported="true">
+
         </activity>
     </application>
 
