Registration and Login
Registration now works for both phone and email.
Resend OTP yet to be implemented.
Login is yet to be fixed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,6 @@
             android:name=".SellerAddProduct"
             android:exported="true">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
         <activity
             android:name=".Seller_All_Products"
@@ -51,7 +45,18 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
+
+        <activity
+            android:name=".PhoneLoginRegisterActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
