--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UnicodeInternalHackathon">
         <activity
+            android:name=".Seller_OrderDescription"
+            android:exported="false" />
+        <activity
             android:name=".Buyer_OrderDescription"
             android:exported="false" />
         <activity
@@ -42,8 +45,7 @@
             android:exported="true" />
         <activity
             android:name=".Buyer_All_Products"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".SellerProducts"
             android:exported="true" />
